--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router": "^7.5.3",
     "react-toastify": "^11.0.5",
     "toastify": "^2.0.1",
     "uuid": "^11.1.0"
